# dotfiles

./: .tmux.conf  README.md  mimeapps.list
.desktop/: FL Studio 12--FL64--1695142013.947879.desktop
.helix/: config.toml  languages.toml
.helix/themes/: amberwood_better.toml  base16-chalk-better.toml  base16-custom.toml  base16-darktooth-better.toml  base16-ubuntu.toml  curzon-ubuntu.toml  dark1.toml  flexoki_dark_ubuntu.toml  jetbrains_dark_ubuntu.toml  leah2mono.toml  mine_colorful_one.toml  molokai-ubuntu.toml  sea-shells.toml  solarized_dark_better.toml  zenburn-better.toml  zenburn-darker.toml
alacritty/: alacritty.yml
alacritty/colorschemes/: Mariana.yml  alacritty_kanagawa_dragon.yml  base16-darktooth.toml  base16-darktooth.yml  cake16.toml  cake16.yml  gruvbox-material-alacritty.toml  gruvbox-material-alacritty.yml  iris.yaml  kitty-twilight.toml  minty-melon.toml  minty-melon.yml  moonfly.yml  papercolor-dark.yml  shinji.yml  (+1 more)
apps/: battery
bash/: .aliases  .bash_aliases  .bashrc
battery/: Cargo.toml
battery/src/: i3.rs  lib.rs  main.rs  sway.rs
bspwm/: sxhkdrc
firefox/: userChromeTest.css
herbstluftwm/: autostart
html/: homepage.html
i3wm/: config  init.sh  picom.conf
kitty/: Zenburn-Darker.conf  base16-chalk-256.conf  kitty.conf  kitty.conf.bak
labwc/: autostart  rc.xml
nvim/: init.lua
polybar/: config.ini
scripts/: battery  cpipes-nord  cwdterm  dev  initialize  ncursesbar  rfile  rpic  standby  videowal  vol  walview
sfwbar/: sfwbar.config
x11/: .Xresources  .xinitrc
xfce/: gtk.css
xorg/: .Xresources
zsh/: .zshrc
(+50 files in other folders)
